# N_Puzzle_Solve

./: CMakeLists.txt  README.md  main.cpp
INCLUDES/: AStar.h  BFS.h  DFS.h  Status.h  Util.h
SRC/: AStar.cpp  BFS.cpp  DFS.cpp  Status.cpp  Util.cpp
